Agrego template about

--- a/admin/src/web/templates/home.html
+++ b/admin/src/web/templates/home.html
@@ -6,4 +6,6 @@
 	<h1>Inicio</h1>
 	<p>Bienvenido a mi proyecto flask.</p>
     <p>Somos el grupo numero 28.</p>
+
+	<a href="{{ url_for('about') }}">Ir a about</a>
 {% endblock %}
