agrego vista de moderacion de reseñas

--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -36,7 +36,7 @@
             <ul>
                 <li><a href="{{ url_for('gestion_sitios') }}">Gestión de sitios históricos</a></li>
                 <li><a href="{{ url_for('validacion_propuestas') }}">Validación de propuestas</a></li>
-                <li><a href="#moderacion-reseñas">Moderación de reseñas</a></li> <!-- temporal hasta crear los templates -->
+                <li><a href="{{ url_for('moderacion_reseñas') }}">Moderación de reseñas</a></li> <!-- temporal hasta crear los templates -->
                 <li><a href="#gestion-usuarios">Gestión de usuarios</a></li> <!-- temporal hasta crear los templates -->
             </ul>
         </nav>
