agrego vista de perfil de usuario

--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -23,7 +23,7 @@
                 Cuenta ▼
             </button>
             <div class="user-dropdown-menu">
-                <a href="#perfil">Ver perfil</a>  
+                <a href="{{ url_for('perfil_usuario') }}">Ver perfil</a>  
                 <a href="#cerrar-sesion">Cerrar sesión</a>
             </div>
         </div>
