Agregue la busqueda avanzada de sites y cree pagination

--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -32,7 +32,7 @@
     <div class="sidebar" id="sidebar">
         <nav class="sidebar-nav">
             <ul>
-                <li><a href="{{ url_for('gestion_sitios') }}">Gestión de sitios históricos</a></li>
+                <li><a href="{{ url_for('sites.index') }}">Gestión de sitios históricos</a></li>
                 <li><a href="{{ url_for('validacion_propuestas') }}">Validación de propuestas</a></li>
                 <li><a href="{{ url_for('moderacion_reseñas') }}">Moderación de reseñas</a></li>
                 <li><a href="{{ url_for('users.index') }}">Gestión de usuarios</a></li>
